common api project issues

--- a/common-api/build.gradle
+++ b/common-api/build.gradle
@@ -15,24 +15,24 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 
+sourceSets {
+  generated {
+    compileClasspath = configurations.generatedCompile
+  }
+  main {
+    compileClasspath += generated.output
+    runtimeClasspath += generated.output
+  }
+  test {
+    compileClasspath += generated.output
+    runtimeClasspath += generated.output
+  }
+}
+
 repositories {   // repositories for Jar's you access in your code
   jcenter()
 }
 
-configurations {
-  testClasses {
-    extendsFrom(testRuntime)
-  }
-}
-
-task testJar(type: Jar) {
-  classifier = 'tests'
-  from sourceSets.test.classes
-}
-
-artifacts {
-  testClasses testJar
-}
 
 dependencies {
   // To show the dependency tree, try: ./project.rb gradle dependencies --configuration compile
