--- a/public-api/build.gradle
+++ b/public-api/build.gradle
@@ -93,7 +93,7 @@ dependencies {
   // To show the dependency tree, try: ./project.rb gradle dependencies --configuration compile
   providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.1.0'
   compile project(":common-api")
-  testCompile project(path: ':common-api')
+  testCompile project(":common-api")
   compile 'mysql:mysql-connector-java:+'
   compile 'com.google.cloud.sql:mysql-socket-factory:+'
   compile 'com.google.appengine:appengine:+'
