--- a/public-api/build.gradle
+++ b/public-api/build.gradle
@@ -68,7 +68,6 @@ sourceSets {
     runtimeClasspath += generated.output
   }
   test {
-
     compileClasspath += generated.output
     runtimeClasspath += generated.output
   }
@@ -93,8 +92,7 @@ repositories {   // repositories for Jar's you access in your code
 dependencies {
   // To show the dependency tree, try: ./project.rb gradle dependencies --configuration compile
   providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.1.0'
-
-  compile project(':common-api')
+  compile project(":common-api")
   compile 'mysql:mysql-connector-java:+'
   compile 'com.google.cloud.sql:mysql-socket-factory:+'
   compile 'com.google.appengine:appengine:+'
