--- a/.codacy.yml
+++ b/.codacy.yml
@@ -2,3 +2,8 @@ engines:
   tslint:
     enabled: true
     base_sub_dir: ui
+exclude_paths:
+  // These SQL files are templated for env var substitution, which causes lint complaints.
+  - '*.sql'
+  // We use Typescript; JS files are for tool configuration only.
+  - '*.js'
