--- a/public-api/src/main/resources/public-api.yaml
+++ b/public-api/src/main/resources/public-api.yaml
@@ -213,15 +213,14 @@ paths:
             $ref: "#/definitions/ConceptListResponse"
 
 
-
-  /v1/databrowser/child-concepts:
+  /v1/databrowser/source-concepts:
     get:
       security: []
       tags:
         - dataBrowser
 
       description: Get children of the given concept
-      operationId: "getChildConcepts"
+      operationId: "getSourceConcepts"
       parameters:
         - in: query
           name: concept_id
@@ -229,6 +228,12 @@ paths:
           format: int64
           required: true
           description: concept id to get maps to concepts
+        - in: query
+          name: minCount
+          type: integer
+          format: int32
+          required: false
+          description: minimum source count
       responses:
         200:
           description: a collection of concepts
@@ -404,7 +409,7 @@ definitions:
       stratum5:
         description: stratum 5
         type: string
-      stratum5Name:
+      analysisStratumName:
         description: stratum 5 Name
         type: string
       countValue:
