--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -680,6 +680,23 @@ paths:
           schema:
             $ref: "#/definitions/AuditBigQueryResponse"
 
+  /v1/cron/checkClusters:
+    get:
+      security: []
+      tags:
+        - offlineCluster
+        - cron
+      description: >
+        Endpoint meant to be called offline to trigger cluster checks and
+        cleanup. Enforces upgrades for older cluster deployments. May be slow to
+        execute. Only executable via App Engine cronjob.
+      operationId: checkClusters
+      responses:
+        200:
+          description: Clusters were checked and handled successfully.
+          schema:
+            $ref: "#/definitions/CheckClustersResponse"
+
   /v1/workspaces/{workspaceNamespace}/{workspaceId}/share:
     parameters:
       - $ref: '#/parameters/workspaceNamespace'
@@ -1580,3 +1597,12 @@ definitions:
         description: >
           Number of queries issues against the Curated data repository which are
           flagged as possible audit issues. See logs/alerts for details.
+
+  CheckClustersResponse:
+    type: object
+    properties:
+      clusterDeletionCount:
+        type: integer
+        format: int32
+        description: >
+          Number of clusters deleted during the check.
