--- a/api/build.gradle
+++ b/api/build.gradle
@@ -223,7 +223,7 @@ dependencies {
   compile 'io.swagger:swagger-annotations:1.5.16'
   compile 'org.apache.commons:commons-lang3:3.0'
   compile 'com.blockscore:blockscore-java:4.0.2'
-  compile 'com.google.guava:guava:22.0'
+  compile 'com.google.guava:guava:24.1.1-jre'
   compile 'org.springframework.retry:spring-retry:1.1.5.RELEASE'
 
   // https://github.com/GoogleCloudPlatform/google-cloud-java/issues/1502
