--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -3,6 +3,7 @@
     "billingAccountId": "014D91-FCB792-33D2C0",
     "billingProjectPrefix": "aou-rw-stable-",
     "clusterMaxAgeDays": 14,
+    "clusterIdleMaxAgeDays": 7,
     "debugEndpoints": false,
     "enforceRegistered": false,
     "jupyterUserScriptUri": "gs:\/\/all-of-us-rw-stable-scripts/setup_notebook_cluster.sh",
