--- a/api/config/config_staging.json
+++ b/api/config/config_staging.json
@@ -2,7 +2,8 @@
   "firecloud": {
     "billingAccountId": "014D91-FCB792-33D2C0",
     "billingProjectPrefix": "aou-rw-staging-",
-    "clusterMaxAgeDays": 5,
+    "clusterMaxAgeDays": 7,
+    "clusterIdleMaxAgeDays": 3,
     "debugEndpoints": false,
     "enforceRegistered": true,
     "jupyterUserScriptUri": "gs:\/\/all-of-us-rw-staging-scripts/setup_notebook_cluster.sh",
