--- a/api/config/config_staging.json
+++ b/api/config/config_staging.json
@@ -30,5 +30,8 @@
     "adminIdVerification": "stable-environment-manual-id-verification-requests@fake-research-aou.org",
     "supportGroup": "all-of-us-workbench-eng@googlegroups.com",
     "verifiedSendingAddress": "all-of-us-workbench-eng@googlegroups.com"
+  },
+  "mandrill": {
+    "fromEmail": "donotreply@researchallofus.org"
   }
 }
