use same domain through out and change log leve

--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -32,6 +32,6 @@
     "verifiedSendingAddress": "all-of-us-workbench-eng@googlegroups.com"
   },
   "mandrill": {
-    "fromEmail": "donotreply@researchallofus.org"
+    "fromEmail": "donotreply@fake-research-aou.org"
   }
 }
