multiple standard concept fix

--- a/public-api/src/main/resources/public-api.yaml
+++ b/public-api/src/main/resources/public-api.yaml
@@ -329,8 +329,9 @@ definitions:
           type: string
           description: match column type
         standardConcept:
-          type: object
-          $ref: "#/definitions/Concept"
+          type: "array"
+          items:
+            $ref: "#/definitions/Concept"
           description: standard concept associated with the matched concept
 
   QuestionConcept:
