--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -7,7 +7,8 @@
     "debugEndpoints": false,
     "enforceRegistered": false,
     "jupyterUserScriptUri": "gs:\/\/all-of-us-rw-stable-scripts/setup_notebook_cluster.sh",
-    "registeredDomainName": "all-of-us-registered-stable"
+    "registeredDomainName": "all-of-us-registered-stable",
+    "billingRetryCount": 2
   },
   "auth": {
     "serviceAccountApiUsers": [ "all-of-us-rw-stable@appspot.gserviceaccount.com" ]
