--- a/api/config/config_staging.json
+++ b/api/config/config_staging.json
@@ -7,7 +7,8 @@
     "debugEndpoints": false,
     "enforceRegistered": true,
     "jupyterUserScriptUri": "gs:\/\/all-of-us-rw-staging-scripts/setup_notebook_cluster.sh",
-    "registeredDomainName": "all-of-us-registered-staging"
+    "registeredDomainName": "all-of-us-registered-staging",
+    "billingRetryCount": 2
   },
   "auth": {
     "serviceAccountApiUsers": [ "all-of-us-rw-staging@appspot.gserviceaccount.com" ]
