Test added to fetch concepts from concept relationship

--- a/public-api/src/main/resources/public-api.yaml
+++ b/public-api/src/main/resources/public-api.yaml
@@ -332,7 +332,7 @@ definitions:
           type: "array"
           items:
             $ref: "#/definitions/Concept"
-          description: standard concept associated with the matched concept
+          description: standard concepts associated with the matched concept
 
   QuestionConcept:
     type: object
