--- a/api/src/main/resources/client_api.yaml
+++ b/api/src/main/resources/client_api.yaml
@@ -345,6 +345,11 @@ definitions:
     description: filter on the domain in which concepts should be returned
     enum: &DOMAIN [OBSERVATION, PROCEDURE, DRUG, CONDITION, MEASUREMENT, DEVICE, RACE, GENDER, ETHNICITY]
 
+  MatchType:
+    type: string
+    description: match column type on concept search
+    enum: [CONCEPT_CODE, CONCEPT_ID, CONCEPT_NAME]
+
   Concept:
     description: A concept describing a type of entity (e.g. measurement, observation, procedure.)
     type: object
@@ -432,3 +437,11 @@ definitions:
         type: "array"
         items:
           $ref: "#/definitions/Concept"
+      matchType:
+        description: match column type on which concept search was successful
+        $ref: "#/definitions/MatchType"
+      standardConcepts:
+        type: "array"
+        items:
+          $ref: "#/definitions/Concept"
+        description: standard concepts associated with the matched concept
