--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -33,6 +33,7 @@
     "verifiedSendingAddress": "all-of-us-workbench-eng@googlegroups.com"
   },
   "mandrill": {
-    "fromEmail": "donotreply@fake-research-aou.org"
+    "fromEmail": "donotreply@fake-research-aou.org",
+    "sendRetries": 3
   }
 }
