--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -31,5 +31,9 @@
     "adminIdVerification": "stable-environment-manual-id-verification-requests@fake-research-aou.org",
     "supportGroup": "all-of-us-workbench-eng@googlegroups.com",
     "verifiedSendingAddress": "all-of-us-workbench-eng@googlegroups.com"
+  },
+  "mandrill": {
+    "fromEmail": "donotreply@fake-research-aou.org",
+    "sendRetries": 3
   }
 }
