Srushti gangireddy/advanced concept search fix (#939)
* Advanced concept search dialect fix

* search codes

* added match type and standard concept

* added match type and standard concept

* Working predicate change

* Changed predicate

* Codacy fix

* Codacy fix

* Tests to test the order of match

* standard concept fetch fix

* standard concept fetch fix

* standard concept fetch fix

* multiple standard concept fix

* changed match type to enum

* added c to standard concept check

* Test added to fetch concepts from concept relationship

* concept relationship test

* Codacy fix

* Controller Test

* Data Browser Controller Test

* Removing unused imports

* data browser controller tests

* empty search

* test

* Got rid of conceptsSearch and changed the findAllConceptsOrderedBy to take in limit, changed the name of api to searchConcepts

* commented ref to getConceptsSearch

* Codacy fix

* query update

* query update

* Added standardcode or id match enum

* tweaks to the predicate addition

* indentation tweaks

--- a/api/src/main/resources/client_api.yaml
+++ b/api/src/main/resources/client_api.yaml
@@ -338,12 +338,17 @@ definitions:
   StandardConceptFilter:
     type: string
     description: filter on whether standard, non-standard, or all concepts should be returned\
-    enum: &STANDARD_CONCEPT_FILTER [ALL_CONCEPTS, STANDARD_CONCEPTS, NON_STANDARD_CONCEPTS]
+    enum: &STANDARD_CONCEPT_FILTER [ALL_CONCEPTS, STANDARD_CONCEPTS, NON_STANDARD_CONCEPTS, STANDARD_OR_CODE_ID_MATCH]
 
   Domain:
     type: string
     description: filter on the domain in which concepts should be returned
     enum: &DOMAIN [OBSERVATION, PROCEDURE, DRUG, CONDITION, MEASUREMENT, DEVICE, RACE, GENDER, ETHNICITY]
+
+  MatchType:
+    type: string
+    description: match column type on concept search
+    enum: [CONCEPT_CODE, CONCEPT_ID, CONCEPT_NAME]
 
   Concept:
     description: A concept describing a type of entity (e.g. measurement, observation, procedure.)
@@ -432,3 +437,11 @@ definitions:
         type: "array"
         items:
           $ref: "#/definitions/Concept"
+      matchType:
+        description: match column type on which concept search was successful
+        $ref: "#/definitions/MatchType"
+      standardConcepts:
+        type: "array"
+        items:
+          $ref: "#/definitions/Concept"
+        description: standard concepts associated with the matched concept
