--- a/public-api/src/main/resources/public-api.yaml
+++ b/public-api/src/main/resources/public-api.yaml
@@ -21,6 +21,7 @@ produces:
 # date formatting is inconsistent between server and client. Time values are stored as
 # milliseconds since the UNIX epoch.
 
+
 ##########################################################################################
 ## PATHS
 ##########################################################################################
@@ -118,19 +119,19 @@ paths:
           schema:
             $ref: "#/definitions/DbDomainListResponse"
 
-  /v1/databrowser/advanced-concept-search:
-    get:
+  /v1/databrowser/searchConcepts:
+    post:
       security: []
       tags:
         - dataBrowser
       description: Gets list of matched concepts
-      operationId: "getAdvancedConceptSearch"
+      operationId: "searchConcepts"
       parameters:
         - in: body
           name: request
           description: search concept request
           schema:
-            $ref: "#/definitions/SearchConceptsRequest"
+             $ref: "#/definitions/SearchConceptsRequest"
       responses:
         200:
           description: A collection of matched concepts
@@ -181,37 +182,6 @@ paths:
           description: A collection of surveys
           schema:
             $ref: "#/definitions/DbDomainListResponse"
-
-  /v1/databrowser/search-concepts:
-    get:
-      security: []
-      tags:
-        - dataBrowser
-
-      description: Searches for concepts in concept table with search string and filters
-      operationId: "getConceptsSearch"
-      parameters:
-        - in: query
-          name: concept_name
-          type: string
-          required: false
-          description: concept name search string
-        - in: query
-          name: standard_concept
-          type: string
-          required: false
-          description: standard concept filter
-        - in: query
-          name: domain_id
-          type: string
-          required: false
-          description: vocabulary id filter
-      responses:
-        200:
-          description: A collection of concepts
-          schema:
-            $ref: "#/definitions/ConceptListResponse"
-
 
   /v1/databrowser/source-concepts:
     get:
@@ -324,7 +294,14 @@ definitions:
           type: "array"
           items:
             $ref: "#/definitions/Concept"
-
+        matchType:
+          description: match column type on which concept search was successful
+          $ref: "#/definitions/MatchType"
+        standardConcepts:
+          type: "array"
+          items:
+            $ref: "#/definitions/Concept"
+          description: standard concepts associated with the matched concept
 
   QuestionConcept:
     type: object
@@ -551,11 +528,15 @@ definitions:
   StandardConceptFilter:
     type: string
     description: filter on whether standard, non-standard, or all concepts should be returned\
-    enum: &STANDARD_CONCEPT_FILTER [ALL_CONCEPTS, STANDARD_CONCEPTS, NON_STANDARD_CONCEPTS]
+    enum: &STANDARD_CONCEPT_FILTER [ALL_CONCEPTS, STANDARD_CONCEPTS, NON_STANDARD_CONCEPTS, STANDARD_OR_CODE_ID_MATCH]
   Domain:
     type: string
     description: filter on the domain in which concepts should be returned
     enum: &DOMAIN [OBSERVATION, PROCEDURE, DRUG, CONDITION, MEASUREMENT, DEVICE, RACE, GENDER, ETHNICITY]
+  MatchType:
+    type: string
+    description: match column type on concept search
+    enum: [CONCEPT_CODE, CONCEPT_ID, CONCEPT_NAME]
 
   SearchConceptsRequest:
     type: object
