--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@
 /ui/yarn-error.log
 /libproject/swagger-codegen-cli.jar
 /ui/src/generated/*
+/ui/src/notebooks-generated/*
 /ui/src/publicGenerated/*
 cloud_sql_proxy
 node_modules
