adding in email

--- a/api/config/config_staging.json
+++ b/api/config/config_staging.json
@@ -18,7 +18,9 @@
     "debugQueries": true
   },
   "googleCloudStorageService": {
-    "credentialsBucketName": "all-of-us-rw-staging-credentials"
+    "credentialsBucketName": "all-of-us-rw-staging-credentials",
+    "emailImagesBucketName": "all-of-us-workbench-test-email-images"
+
   },
   "googleDirectoryService": {
     "gSuiteDomain": "staging.fake-research-aou.org"
@@ -30,7 +32,8 @@
   "admin": {
     "adminIdVerification": "stable-environment-manual-id-verification-requests@fake-research-aou.org",
     "supportGroup": "all-of-us-workbench-eng@googlegroups.com",
-    "verifiedSendingAddress": "all-of-us-workbench-eng@googlegroups.com"
+    "verifiedSendingAddress": "all-of-us-workbench-eng@googlegroups.com",
+    "loginPage": "http:\/\/all-of-us-workbench-staging.appspot.com/login"
   },
   "mandrill": {
     "fromEmail": "donotreply@fake-research-aou.org",
