--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -21,7 +21,8 @@
     "debugQueries": false
   },
   "googleCloudStorageService": {
-    "credentialsBucketName": "all-of-us-workbench-test-credentials"
+    "credentialsBucketName": "all-of-us-workbench-test-credentials",
+    "emailImagesBucketName": "all-of-us-workbench-test-email-images"
   },
   "googleDirectoryService": {
     "gSuiteDomain": "fake-research-aou.org"
@@ -33,7 +34,8 @@
   "admin": {
     "adminIdVerification": "stable-environment-manual-id-verification-requests@fake-research-aou.org",
     "supportGroup": "all-of-us-workbench-eng@googlegroups.com",
-    "verifiedSendingAddress": "all-of-us-workbench-eng@googlegroups.com"
+    "verifiedSendingAddress": "all-of-us-workbench-eng@googlegroups.com",
+    "loginPage": "http:\/\/localhost:4200/login"
   },
   "mandrill": {
     "fromEmail": "donotreply@fake-research-aou.org",
