--- a/api/src/main/resources/cb_search_api.yaml
+++ b/api/src/main/resources/cb_search_api.yaml
@@ -196,6 +196,7 @@ definitions:
       - name
       - group
       - selectable
+      - attribute
     properties:
       id:
         description: id of the criteria
@@ -239,6 +240,9 @@ definitions:
           for leaves in the tree. Parents don't have domain ids and concept
           id will be used in the case that a parent is selectable.
         type: string
+      attribute:
+        description: specifies if extra attributes are needed
+        type: boolean
 
   SearchRequest:
     description: >
