--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -34,8 +34,7 @@
     "verifiedSendingAddress": "all-of-us-workbench-eng@googlegroups.com"
   },
   "jira": {
-    "projectKey": "RW",
-    "issueType": "Bug"
+    "projectKey": "RW"
   },
   "mandrill": {
     "fromEmail": "donotreply@fake-research-aou.org",
