--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -120,6 +120,8 @@ paths:
           description: Success message
           schema:
             $ref: "#/definitions/BugReport"
+        500:
+          description: Cannot connect to JIRA. Please try again later
 
   # TODO(dmohs): If the username is not present in the query string, this responds with 500 Server
   # Error. It should respond with 400 Bad Request.
