--- a/api/tools/build.gradle
+++ b/api/tools/build.gradle
@@ -130,15 +130,7 @@ dependencies {
   compile 'org.hibernate:hibernate-validator:+'
   compile 'com.squareup.okhttp:okhttp:2.6.0'
   compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
-  compile 'org.apache.commons:commons-lang3:3.7'
-  compile 'com.blockscore:blockscore-java:4.0.2'
-  // compile 'org.json:json:20160810'
-  compile 'javax.json:javax.json-api:1.0'
-  // compile 'org.glassfish:javax.json:1.0.4'
-  compile 'com.sun.jersey:jersey-client:1.19.3'
-  compile 'org.apache.httpcomponents:httpmime:4.3.1'
-
-
+ // compile 'javax.json:javax.json-api:1.0'
 }
 
 
