--- a/api/src/main/resources/jira.yaml
+++ b/api/src/main/resources/jira.yaml
@@ -19,6 +19,9 @@ securityDefinitions:
   AdminSecurity:
     type: basic
 
+##########################################################################################
+## PATHS
+##########################################################################################
 
 paths:
  /issue:
@@ -74,8 +77,9 @@ paths:
      security:
        - AdminSecurity: []
 
-
-
+##########################################################################################
+## DEFINITIONS
+##########################################################################################
 definitions:
   IssueRequest:
       description: ''
