--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -1,5 +1,6 @@
 {
   "firecloud": {
+    "baseUrl": "https://api.firecloud.org",
     "billingAccountId": "014D91-FCB792-33D2C0",
     "billingProjectPrefix": "aou-rw-stable-",
     "clusterMaxAgeDays": 14,
@@ -7,6 +8,7 @@
     "debugEndpoints": false,
     "enforceRegistered": false,
     "jupyterUserScriptUri": "gs:\/\/all-of-us-rw-stable-scripts/setup_notebook_cluster.sh",
+    "leoBaseUrl": "https://notebooks.firecloud.org",
     "registeredDomainName": "all-of-us-registered-stable",
     "billingRetryCount": 2
   },
