exclude guava from bigquery

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -236,7 +236,9 @@ dependencies {
   compile 'com.fasterxml.jackson.core:jackson-databind:2.9.5'
   compile 'com.google.apis:google-api-services-admin-directory:directory_v1-rev86-1.23.0'
   compile 'com.google.apis:google-api-services-oauth2:+'
-  compile 'com.google.cloud:google-cloud-bigquery:0.30.0-beta'
+  compile ('com.google.cloud:google-cloud-bigquery:0.30.0-beta') {
+    exclude group: 'com.google.guava', module:'guava'
+  }
   compile ('com.google.cloud:google-cloud-storage:1.8.0') {
     exclude group: 'com.google.guava', module:'guava-jdk5'
   }
