--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -1450,6 +1450,7 @@ definitions:
     required:
       - name
       - path
+      - lastModifiedTime
     properties:
       name:
         type: string
@@ -1457,6 +1458,10 @@ definitions:
       path:
         type: string
         description: The path is in format of gs://bucket-name/name
+      lastModifiedTime:
+        type: integer
+        format: int64
+        description: Milliseconds since the UNIX epoch.
 
   ClusterListResponse:
     type: object
